# ft-transcendence

./: .env  .env.example  .gitignore  .prettierignore  .prettierrc.json  .vite.config.ts  Dockerfile  LICENSE  Makefile  README.md  Readme.md  changes.notes  docker-compose.yml  index.html  main.css  main.ts  nginx.conf  notes-cybersecurity  notes.txt  notess.txt  package-lock.json  package.json  shell.nix  tailwind.config.ts  tournament.notes  tsconfig.json  yapi.txt
cli/: Cargo.toml  Dockerfile
cli/src/: app.rs  auth.rs  main.rs  types.rs
cli/src/game/: movement.rs
cli/src/ui/: game.rs  game_lobby.rs  game_over.rs  gamemode.rs  host_selector.rs  join_room.rs  login.rs  mod.rs  nickname_page.rs  pages.rs  totp.rs
cli/src/ui/widgets/: ball.rs  filledrectangle.rs  mod.rs
cli/src/websocket/: errors.rs  handshake.rs  mod.rs
cli/src/websocket/events/: errors.rs  mod.rs  request.rs  response.rs  websocketevents.rs
frontend-src/: index.html  postcss.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
frontend-src/certs/: server.crt
frontend-src/css/: scrollbar.css  style.css
frontend-src/ts/: auth.ts  authToggle.ts  game.ts  main.ts  mobilMenu.ts  multiPlayerGame.ts  profileOptions.ts  router.ts  socketManager.ts  statistics.ts
frontend-src/types/: client.ts
public/: index.html
public/css/: input.css  output.css
services/ai-opponent/: package.json
services/api-gateway/: Dockerfile  package-lock.json  package.json  tsconfig.json
services/auth-user-service/: Dockerfile  package.json  tsconfig.json
src/: server.ts  tsconfig.json
(+152 files in other folders)
