[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[dependencies]
# Not using the newest version of crossterm because ratatui still depends on the old one
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures-util = "0.3.31"
http = "1.3.1"
http-body-util = "0.1.3"
hyper = { version = "1.7.0", features = [ "server" ] }
hyper-util = "0.1.17"
native-tls = "0.2.14"
ratatui = "0.29.0"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
tokio = { version = "1.47.1", features = ["full"] }
tokio-tungstenite = { version = "0.27.0", features = ["native-tls"] }
tui-input = { version = "0.14.0", features = ["crossterm"] }
url = "2.5.7"
webbrowser = "1.0.5"
